personal-portfolio/src/App.css
/* ... */
*{
  margin:0;
  padding:0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  scroll-padding-top:75px ;
}

body.light{
  font-weight: 400;
  overflow-x: hidden;
  position: relative;
  background-color: var(--background-color);
  color: var(--text-color) ;
  font-family:'Poppins', sans-serif; 

   
}
body.dark {
  font-weight: 400;
  overflow-x: hidden;
  position: relative;
  font-family:'Poppins', sans-serif; ;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  padding: 0;
  line-height: normal;
}

h2 {
  color: var(--text-color);
  margin-top: 70px !important;
  font-family: 'Barlow Condensed', sans-serif;
  font-weight: 600 !important;
  font-size: 40px !important;
}

h3 {
  margin-top: 70px !important;
  font-family: 'Barlow Condensed', sans-serif;
  font-size: 50px !important;
  font-weight: 600 !important;
  color: var(--text-color);
}

header {
  height: 100px;
  background-color: var(--background-color);
}

p.success {
  color:green;
}

p.danger {
  color:red;
}

/* NAVBAR CSS */
/* DARK MODE TOGGLE CSS */
.toggle {
  display: flex;
  justify-content: center;
  align-items: center;
  color:var(--text-color);
  font-weight:600;
  margin-bottom: 0 !important;
  margin-right: 15px;
}



.toggle-theme-wrapper {
  display:flex;
  flex-direction: row;
  align-items: center;
  gap: 4px;
  width: 46px;
}

.toggle-theme-wrapper {
  font-size: 28px;
}

.toggle-theme {
  position: relative;
  display: inline-block;
  height: 34px;
  width:60px;
}

.toggle-theme input {
  display:none;
}

.slider {
  background-color: #ccc;
  position: absolute;
  cursor: pointer;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  transition: 0.2s;
  border-style: solid;
  border-color: #fff;
  border-width: 1px;
  

}

.slider:before {
  background-color: #fff;
  bottom:4px;
  content: "";
  height: 24px;
  left: 4px;
  position: absolute;
  transition: 0.4s;
  width: 24px;
 
}

input:checked + .slider:before {
  transform: translate(26px);
}

input:checked + .slider {
  background-color:var(--link-background-color);
}

.slider.round {
  border-radius: 34px;
  color: var(--text-color);
  
}

.slider.round:before {
  border-radius: 50%;
  color: var(--text-color);
}

#darkMode {
  width: 140px;
}

/* NAVBAR STRUCTURE CSS */

nav.navbar {
  padding: 18px 0;
  position: fixed;
  width: 100%;
  background-color: var(--background-color);
  top: 0;
  z-index: 9999;
  transition: 0.32 ease-in-out;

}

nav.navbar.scrolled {
  padding: 18px 0;
  background-color: var(--background-color);
}

.navbar-brand {
  margin-top: 5px;
  display: flex;
  justify-content: center;
}

nav.navbar a.navbar-brand {
  width: 9%;
}

.navbar-nav {
  margin-left: auto !important;
  margin-right: 0 !important;
  background-color: var(--link-background-color);
  padding-left: 6px !important;
  padding: 5px;
  border-radius: 30px;
  align-items: center;
}

#basic-navbar-nav {
  background-color: var(--background-color);
}

/* NAVBAR LINK BAR SECTIONS CSS */

.nav-link {
  padding: 4px !important;
}

nav.navbar .navbar-nav .nav-link.navbar-link {
  font-weight: bold;
  color: var(--text-color) !important;
  background-color: var(--light-hover-bg-color);
  letter-spacing: 0.8px;
  padding: 0 25px;
  font-size: 18px;
  opacity: 0.75;
}

nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
nav.navbar .navbar-nav a.nav-link.navbar-link:active{
  opacity: 1;
}

a.navbar-Link.nav-link {
  color:var(--text-color);
  width:100px;
  font-weight: 600;
}

a.active.navbar-Link.nav-link {
  background-color: var(--link-highlight-color);
  color: var(--text-color);
  border-radius: 50px;
  font-weight: 600;
  transition: all 0.3s;
}

span.navbar-text {
  display: flex;
  align-items:center;
}

/* NAVBAR SOCIALS BUTTONS CSS */

.social-icon {
  display: inline-block;
  margin-left: 14px;
}

.social-icon a {
  width: 42px;
  height:42px;
  color:var(--dark) !important;
  background: var(--button-background-color);
  display: inline-flex;
  border-radius: 50%;
  margin-right: 6px;
  align-items: center;
  justify-content: center;
  line-height: 1;
  border: 2px solid var(--social-border-color);
}

.social-icon a::before{
  content: "";
  width: 42px;
  height:42px;
  position: absolute;
  fill:#fff !important;
  background-color: #f8f9fa !important;
  border-radius: 50%;
  transform: scale(0);
  transition: 0.3s ease-in-out;
}

.social-icon a:hover::before {
  transform: scale(1);
  border: 1px solid #121212;
}

.social-icon a img {
  width:40%;
  color: #121212;
  z-index: 1;
  transition: 0.3s ease-in-out;
}

.social-icon a:hover img {
  filter:brightness(1) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(100%);
}

/* NAVBAR "CONNECT WITH ME" BUTTON CSS */

.navbar-text button {
  font-weight:600;
  color: var(--text-color);
  border: 1px solid var(--text-color);
  /* padding: 18px 34px; */
  font-size: 18px;
  position:relative;
  background-color: var(--link-background-color);
  transition: 0.3s ease-in-out;
}

.navbar-text button span {
  z-index: 1;
}

.navbar-text button::before {
  content: "";
  width: 0%;
  height: 100%;
  position: absolute;
  background-color: var(--transition-color) !important;
  left: 0;
  top: 0;
  z-index: -1;
  transition: 0.3s ease-in-out;
}

.navbar-text button:hover {
  color: var(--background-color);
  z-index: 2;
}

.navbar-text button:hover::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
}

nav.navbar .navbar-toggler:active,
nav.navbar .navbar-toggler:focus {
  outline: none;
    box-shadow: none;
}

nav.navbar .navbar-toggler-icon {
  width: 24px;
  height: 17px;
  background-image: none;
  position: relative;
  border-bottom: 2px solid #fff;
  transition: all 300ms linear;
  top: -2px;
}

nav.navbar .navbar-toggler-icon:after,
nav.navbar .navbar-toggler-icon:before {
  width: 24px;
  position: absolute;
  height: 2px;
  background-color: #fff;
  top: 0px;
  left: 0px;
  content: '';
  z-index: 2;
  transition: all 300ms linear;
}
/* ... */

